cluster/cloudflare-ddns.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cloudflare-ddns
spec:
  selector:
    matchLabels:
      run: cloudflare-ddns
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
        labels:
          run: cloudflare-ddns
    spec:
      containers:
        - name: cloudflare-ddns
          image: oznu/cloudflare-ddns
