cluster/signal-photo-mailer.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: signal-photo-mail
spec:
  selector:
    matchLabels:
      run: signal-photo-mail
  replicas: 1 
  template:
    metadata:
      labels:
        run: signal-photo-mail
    spec:
      volumes:
        - name: nfs
          persistentVolumeClaim:
            claimName: nfs-claim
      containers:
      - name: signal-photo-mail
        image: ohthehugemanatee/signal-photo-mail
        volumeMounts:
          - name: nfs
            mountPath: "/root/.local/share/signal-cli"
            subPath: ".signal-cli"
