cluster/db-sync-checking.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db-sync-checking
spec:
  selector:
    matchLabels:
      run: db-sync-checking
  replicas: 1
  template:
    metadata:
      labels:
        run: db-sync-checking
    spec:
      nodeSelector:
        kubernetes.io/arch: amd64
      containers:
      - image: ohthehugemanatee/db-ynab-sync:0.9.5
        name: db-sync-checking
        ports:
        - containerPort: 3000
          name: dbsyncchecking
          protocol: TCP
        ports:
        - containerPort: 3000
          name: dbsyncchecking
          protocol: TCP

---

apiVersion: v1
kind: Service
metadata:
  labels:
    run: db-sync-checking
  name: db-sync-checking
spec:
  ports:
  - port: 3000
    protocol: TCP
    targetPort: 3000
  selector:
    run: db-sync-checking

---

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: db-sync-checking
spec:
  rules:
  - host: db-ynab-sync.germany.vertesi.com
    http:
      paths:
      - backend:
          serviceName: db-sync-checking
          servicePort: 3000
        path: /
  - host: db-ynab-sync.cluster.vert
    http:
      paths:
      - backend:
          serviceName: db-sync-checking
          servicePort: 3000
        path: /
