cluster/delugevpn.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: delugevpn
spec:
  selector:
    matchLabels:
      run: delugevpn
  replicas: 1 
  template:
    metadata:
      labels:
        run: delugevpn
    spec:
      nodeSelector:
        beta.kubernetes.io/arch: arm
      volumes:
        - name: nfs
          persistentVolumeClaim:
            claimName: nfs-claim
      containers:
      - name: delugevpn
        image: ledokun/armhf-arch-delugevpn
        ports:
          - containerPort: 8112
          - containerPort: 58846
        volumeMounts:
          - name: nfs
            mountPath: "/config"
            subPath: ".docker/config/delugevpn"
          - name: nfs
            mountPath: "/data"
            subPath: "media/Downloads"
          - name: nfs
            mountPath: "/downloads"
            subPath: "media/Downloads"
        securityContext:
          capabilities:
            add:
              - NET_ADMIN

---

apiVersion: v1
kind: Service
metadata:
  name: delugevpn
  labels:
    run: delugevpn
spec:
  ports:
  - name: http
    port: 8112
    protocol: TCP
  - name: api
    port: 58846
    protocol: TCP
  selector:
    run: delugevpn

---

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: delugevpn
spec:
  rules:
  - host: deluge.cluster.vert
    http:
      paths:
      - path: /
        backend:
          serviceName: delugevpn
          servicePort: 8112
  - host: deluge.vert
    http:
      paths:
      - path: /
        backend:
          serviceName: delugevpn
          servicePort: 8112
  - host: deluge.germany.vertesi.com
    http:
      paths:
      - path: /
        backend:
          serviceName: delugevpn
          servicePort: 8112
