cluster/nextcloud.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: nextcloud
  labels:
    app: nextcloud
spec:
  selector:
    matchLabels:
      run: nextcloud
  replicas: 1
  template:
    metadata:
      labels:
        run: nextcloud
    spec:
      volumes:
        - name: nfs
          persistentVolumeClaim:
            claimName: nfs-claim
      containers:
        - name: nextcloud
          image: ghcr.io/linuxserver/nextcloud
          startupProbe:
            httpGet:
              path: /status.php
              port: 80
            initialDelaySeconds: 120
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 30
            successThreshold: 1
          readinessProbe:
            httpGet:
              path: /status.php
              port: 80
            initialDelaySeconds: 120
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3
            successThreshold: 1
          livenessProbe:
            httpGet:
              path: /status.php
              port: 80
            initialDelaySeconds: 120
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3
            successThreshold: 1
          ports:
            - containerPort: 80
              name: nextcloud
              protocol: TCP
          volumeMounts:
            - name: nfs
              mountPath: "/data"
              subPath: "nextcloud"
            - name: nfs
              mountPath: "/config"
              subPath: ".docker/config/nextcloud"
---

apiVersion: v1
kind: Service
metadata:
  name: nextcloud
  labels:
    run: nextcloud
spec:
  ports:
  - port: 80
    protocol: TCP
  selector:
    run: nextcloud

---

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nextcloud
  annotations:
    traefik.frontend.priority: "2"
    cert-manager.io/cluster-issuer: letsencrypt-prod
    ingress.kubernetes.io/hsts-max-age: "15552000"
    ingress.kubernetes.io/hsts-include-subdomains: "true"
    ingress.kubernetes.io/hsts-preload: "true"
    traefik.ingress.kubernetes.io/redirect-entry-point: https
spec:
  rules:
  - host: nextcloud.cluster.vert
    http:
      paths:
      - path: /
        backend:
          serviceName: nextcloud
          servicePort: 80
  - host: nextcloud.vert
    http:
      paths:
      - path: /
        backend:
          serviceName: nextcloud
          servicePort: 80
  - host: germany.vertesi.com
    http:
      paths:
      - path: /
        backend:
          serviceName: nextcloud
          servicePort: 80
  tls:
  - hosts:
    - germany.vertesi.com
    secretName: germany-vertesi-com-tls
