cluster/radarr.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: radarr
spec:
  selector:
    matchLabels:
      run: radarr
  replicas: 1 
  template:
    metadata:
      labels:
        run: radarr
    spec:
      volumes:
        - name: nfs
          persistentVolumeClaim:
            claimName: nfs-claim
      containers:
      - name: radarr
        image: linuxserver/radarr
        ports:
          - containerPort: 7878
        volumeMounts:
          - name: nfs
            mountPath: "/config"
            subPath: ".docker/config/radarr"
          - name: nfs
            mountPath: "/downloads"
            subPath: "media/Downloads"
          - name: nfs
            mountPath: "/movies"
            subPath: "media/Movies"

---

apiVersion: v1
kind: Service
metadata:
  name: radarr
  labels:
    run: radarr
spec:
  ports:
  - port: 7878
    protocol: TCP
  selector:
    run: radarr

---

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: radarr
spec:
  rules:
  - host: radarr.cluster.vert
    http:
      paths:
      - path: /
        backend:
          serviceName: radarr
          servicePort: 7878
  - host: radarr.germany.vertesi.com
    http:
      paths:
      - path: /
        backend:
          serviceName: radarr
          servicePort: 7878
  - host: radarr.vert
    http:
      paths:
      - path: /
        backend:
          serviceName: radarr
          servicePort: 7878
