cluster/sonarr.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sonarr
spec:
  selector:
    matchLabels:
      run: sonarr
  replicas: 1 
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        run: sonarr
    spec:
      volumes:
        - name: nfs
          persistentVolumeClaim:
            claimName: nfs-claim
        - name: iscsi
          persistentVolumeClaim:
            claimName: sonarr-claim
      containers:
      - name: sonarr
        image: linuxserver/sonarr
        ports:
          - containerPort: 8989
        volumeMounts:
          - name: iscsi
            mountPath: "/config"
          - name: nfs
            mountPath: "/downloads"
            subPath: "media/Downloads"
          - name: nfs
            mountPath: "/tv"
            subPath: "media/TV Shows"

---

apiVersion: v1
kind: Service
metadata:
  name: sonarr
  labels:
    run: sonarr
spec:
  ports:
  - port: 8989
    protocol: TCP
  selector:
    run: sonarr

---

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: sonarr
spec:
  rules:
  - host: sonarr.cluster.vert
    http:
      paths:
      - path: /
        backend:
          serviceName: sonarr
          servicePort: 8989
  - host: sonarr.vert
    http:
      paths:
      - path: /
        backend:
          serviceName: sonarr
          servicePort: 8989
  - host: sonarr.germany.vertesi.com
    http:
      paths:
      - path: /
        backend:
          serviceName: sonarr
          servicePort: 8989
